--- a/20260122/index.Rmd
+++ b/20260122/index.Rmd
@@ -19,17 +19,33 @@ output:
 ## **Welcome to Linguistics**
 <br>
 .pull-left[
-- **overall course goal** - learn about basic concepts in Linguistics: the scientific study of language
-● Language is something that comes naturally to us as human beings:
-○ We acquire our native language(s) as children simply by interacting with peers and caregivers
-○ We use language to socialize, work, communicate, interact – nearly everything we do!
-○ And we often use language without being consciously aware of it
-● At the same time, language is extremely complicated:
-○ Cambridge Grammar of the English Language takes 1,860 pages to describe English
-sentence structure, never mind its sound system, meaning, vocabulary, conversational
-structure, social and regional variation, etc. – and it's still not complete!
+**Linguistics** the scientific study of language <br><br>
+
+**overall course goal** - learn about basic concepts in <u>Linguistics</u><br><br>
+<br><br>
+What **languages** do you speak (natively)?
+
 ]
 .pull-right[
+<br><br><br>
+<img src="../pic/0122/image.png" width="90%">
+]
+
+---
+## **Welcome to Linguistics**
+<br>
+.pull-left[
+**language** is something that comes naturally to us as human beings:
+- We acquire our native language(s) as children simply by interacting with peers and caregivers<br><br>
+- We use language to socialize, communicate, interact – nearly everything we do!<br><br>
+- And we often use language without being consciously aware of it<br><br>
+
+**language** is also extremely complicated:
+- *Cambridge Grammar of the English Language* takes **1,860** pages to describe English
+sentence structure – and it's still not complete!
+]
+.pull-right[
+<br><br><br>
 <img src="../pic/0122/image.png" width="90%">
 ]
 
@@ -37,233 +53,258 @@ structure, social and regional variation, etc. – and it's still not complete!
 ## **Course Goals**
 <br><br>
 Linguistics tries to make sense of this complicated system, and findings from linguistics have given us a lot of insight into how language works – but there's still more to learn <br><br>
-So in this course, we're going to learn about how to analyze language from a linguistic point of view. We'll first learn some basics about language and linguistics. Then we'll spend 1-2 weeks on:
+So in this course, we're going to learn about how to analyze language from a linguistic point of view. We'll first learn some basics about language and linguistics. Then we'll spend 1-2 weeks on:<br><br>
 - **Morphology** – the study of word structure
 - **Syntax** – the study of sentence structure
+<br><br>
 - **Semantics** – the study of how (literal) meaning is derived from words and phrases
 - **Pragmatics** – the study of how (implied) meaning is derived from language in context
+<br><br>
 - **Phonetics** – the study of the physical properties of speech sounds (or signs)
 - **Phonology** – the study of speech sounds (or signs) as a system
 
 ---
-## **Why take this class?**
-<br><br>
-Linguistics 201:
-- is a required course for the Linguistics **major and minor**, and speech and hearing sciences major, etc.
-- is required to take any upper-level Linguistics classes:
-  - we offer advanced classes in all of the topics mentioned in this class – if you found any
-of them interesting, consider taking another Linguistics class!
-- is a required course for the Language Track of the Cognitive Science Major
-- fulfills the following Core Curriculum learning goals:
-  - understand the nature of human languages and their speakers [AHq].
-  - apply effective and efficient mathematical or other formal processes to reason and solve
-problems [QR].
-
----
 ## **What can you do with Linguistics?**
-- with a Linguistics education, you can work in:
-  - academics and education
-  - tech industry
-  - speech pathology
-  - second language education
-  - dialect coaching
-  - forensics
+<br>
+.pull-left[
+- with a Linguistics education, you can work in: <br><br>
+  - academics and education<br><br>
+  - tech industry<br><br>
+  - speech pathology<br><br>
+  - second language education<br><br>
+  - dialect coaching<br><br>
+  - forensics<br><br>
   - language policy
-  - and more!
+]
+.pull-right[
+<br>
+<img src="../pic/0122/firstday.jpeg" width="90%">
+]
 
 ---
-## **about the course**
-Classes will be Tues/Thurs 3:50 – 5:10 pm at HH-A2
-Classes will consist of lectures and individual/group work.
-All course materials will be made available via Canvas.
-Office/Student supporting hours: Wednesday 1:00 – 2:00 pm (subject to change) or by appointment.
-Office: DLC Huddle Room 128H at Alexander Library (subject to change)
-You can always email me if you have any questions or concerns: hyunjung.joo@rutgers.edu 
-I will respond within 48 hours during weekdays.
-- A word of caution
+## **About the Course**
+<br>
+.pull-left[<img src="../pic/0122/backtoschool.jpg" width="100%">]
+.pull-right[
+<span style="color:red"><b>Mons/Thurs</b></span> <u>10:20 – 11:40 am</u> at [HH-B6](https://webapps.rutgers.edu/dcs/classrooms/HH-B6)<br><br>
+All course materials will be made available via <b>Canvas</b> and [<b><i>github</i> site</b>](https://merlinudinov.github.io/spring2026ling201)
+  - Readings need to be done before the class on Monday <br><br>
+
+<b>Office/Student supporting hours</b>: Wednesday 10:00 – 11:00 am (subject to change) or by appointment
+  - 003, Linguistics Building (18 Seminary Pl)<br><br>
+  
+You can always email me if you have any questions or concerns: 
+  - [merlin.udinov@rutgers.edu](mailto:merlin.udinov@rutgers.edu)
+  - I will respond within <span style="color:red"><b>48 hours</b></span> during weekdays
+]
+---
+
+## **About the Course**
+<br>
+.pull-left[<img src="../pic/0122/twokids.png" width="100%">]
+.pull-right[
+- A word of <span style="color:red"><b>caution</b></span>
   - There are some technical materials to master here
-  - Some elements of the course will take time and practice to get the hang of
-- A word of encouragement
+  - Some elements of the course will take time and practice to get the hang of<br><br>
+- A word of <span style="color:green"><b>encouragement</b></span>
   - If you do the readings, show up to class, and practice, you will do fine!
   - Language is really a fascinating subject
+]
 
 ---
-## **Readings**
-  - All readings are available on Canvas
-  - Readings need to be done before the class on Monday
-  
----
-## **Grade Components
-- Homework (50%)
-  - Problem sets and short-answer questions on concepts learned in class, turn in on Canvas.
-  - Lowest two Homework grades will be dropped.
-- Midterm and Final Exam (20% each)
-  - Problem sets, short-answer, multiple choice.
-- In-class exams: Final is Dec. 19
-  - Attendance/Participation (10%)
-  - Extra Credit (2%) for participation in Ling. experiments.
-
----
-
-# Resources for students
-
-- **Linguistics Tutoring** – Rutgers Learning Centers (https://learningcenters.rutgers.edu/)
-
-  - Offers walk-in tutoring; most semesters there is a Linguistics tutor on staff.
-
---
-
-- **Office of Disability Services** (https://ods.rutgers.edu/)
-
-  - If you have a disability (visible or invisible, physical or mental) consider registering with ODS.
-
-  - They can send a Letter of Accommodation to your professors.
-  
---
-
-- **Dean of Students—Advocacy, Outreach and Support** (https://studentsupport.rutgers.edu/)
-
-  - If you have a temporary condition, unexpected challenge, or need to take an extended absence, they can help support you and send a letter to your professors.
-
----
-
-# Resources for students
-
+## **Grade Components**
+<br>
 .pull-left[
-- **Get involved!**
-
-  - Join the Linguistics Club, Speech & Hearing Club, or Cognitive Science Club
-  
-- **Stay in touch!**
-
-  - 201 students are added to the Linguistics Department's email list
-  
-  - if you're considering a major or minor, declare it so you can stay on the list
-  
+- <span style="color:green"><b>Homework</b></span> (50%)<br><br>
+  - **8** assignments total<br><br>
+  - lowest **2** scores will be dropped<br><br>
+  - will be posted on Canvas **one week before** they are due (check syllabus for dates)
+  - The uploading file should be a **SINGLE** <span style="color:green"><b>.pdf</b></span> format <br><br>
+  - **due on Sundays** at 11:59 pm one week from when it is posted on Canvas <br><br>
 ]
-
 .pull-right[
-
-- **Other services**
-
-  - Bias Incident Reporting
-  
-  - Office of Veteran and Military Programs and Service
-
-  - Student Health Services
-
-  - Counseling, Alcohol, and Other Drug Assistance Program and Psychiatric Services
-
-  - UWill teletherapy
-
-  - Office for Violence Prevention and Victim Assistance
-
-  - Basic Needs Assistance (food, housing, other essentials)
-
-  - Student Food Pantry
+<img src="../pic/0122/homeworkdog.jpeg" width="49%">
+<img src="../pic/0122/homeworkdog.jpeg" width="49%">
+<br><br><br>
+<img src="../pic/0122/homeworkdog.jpeg" width="49%">
+<img src="../pic/0122/homeworkdog.jpeg" width="49%">
 ]
 
 ---
-
-class: center, middle
-
-# ***CONTENT TIME!***
+## **Grade Components**
+<br>
+.pull-left[
+<img src="../pic/0122/exam.jpeg" width="100%">
+]
+.pull-right[
+- <span style="color:green"><b>Midterm and Final Exam</b></span> (20% each)<br><br>
+  - problem sets, short-answer, multiple choice, etc.<br><br>
+  - the midterm exam is on **MARCH 05**, at class time <br><br>
+  - the final is **NOT** cumulative <br><br>
+  - time and venue for the final will be announced later in the semester<br><br>
+- <span style="color:green"><b>Extra Credit</b></span> (2%)<br><br>
+  - specifics can be found on the syllabus
+]
 
 ---
+## **Grade Components**
+<br>
+.pull-left[
+- <span style="color:green"><b>Attendance/Participation</b></span> (10%)<br><br>
+  - if you show up in class and pick up your name card, you will be marked ‘present’ for that class<br><br>
+  - if you cannot make it to class for any reason, please be sure to either let me know via a quick email or self-report your absence on the **system**<br><br>
+  - all reported absences will be excused; you are **NOT** required to show me doctor’s notes as proof<br><br>
+  - specifics can be found on the syllabus
+]
+.pull-right[
+<img src="../pic/0122/attendance.jpg" width="90%">
+]
 
+---
+## **Resources for Students**
+<br>
+- **Linguistics Tutoring** – Rutgers Learning Centers (https://learningcenters.rutgers.edu/)
+  - Offers walk-in tutoring; most semesters there is a Linguistics tutor on staff.<br><br>
+- **Office of Disability Services** (https://ods.rutgers.edu/)
+  - If you have a disability (visible or invisible, physical or mental) consider registering with ODS.
+  - They can send a Letter of Accommodation to your professors.<br><br>
+- **Dean of Students—Advocacy, Outreach and Support** (https://studentsupport.rutgers.edu/)
+  - If you have a temporary condition, unexpected challenge, or need to take an extended absence, they can help support you and send a letter to your professors.<br><br>
+
+<br><br>
+<img src="../pic/0122/cat1.png" width="24%">
+<img src="../pic/0122/cat2.png" width="24%">
+<img src="../pic/0122/cat3.png" width="24%">
+<img src="../pic/0122/cat4.png" width="24%">
+
+---
+## **Course-related Reminders**
+<br>
+.pull-left[
+**AI policy**: **NOT** allowed to use
+- be aware of **AI's errors and hallucinations**<br><br>
+- Hi, Prof. G. Please solve $x$ for $2x+1=0$.
+- Sure thing! We can think it this way. **2** halves become a complete **1**, so $2x=1$...<br><br>
+  
+**homework dropping**
+- lowest **two** Homework grades will be dropped
+- use it **wisely**<br><br>
+
+**being absent or late coming/early leaving**
+- absence needs previous notifying via **email**<br><br>
+
+**my own language issue**
+]
+.pull-right[
+<img src="../pic/0122/halluci.png" width="80%">
+]
+---
+class: center, middle
+# **Any Questions?**
+
+---
 class: center, middle
 
-# **Mental grammar**
+# **Mental Grammar**
 
 ## The unspoken rules of language
 
 ---
 
-# What is language? What is grammar? 
-
-**Discuss with your neighbors.**
-
-- What is language?
-
-- What is grammar?
-
-- How are the two connected?
-
----
-
-# What is language?
-
-- Language is a *human communication system* we use for communicating ideas and socializing
-
---
-
-- Language is a *systematic, rule-governed* system
-
-  - Language combines sounds (or signs) into words, and words into sentences to express complex ideas.
-
---
-
-  - We need rules to understand how to put together ideas into language when speaking and decode language into ideas when listening: **a mental grammar**
-
---
-
-  - The rules of your mental grammar might not be those rules you learn in school or read in a textbook, but **every speaker has a mental grammar**, even if they're not aware of it, and no matter what language or dialect they speak.
-
----
-
-# What is linguistics?
-
-- **Linguistics:** the scientific study of language
-
-  - We use the scientific method with experiments and real-life data to develop theories about how language works.
-
---
-
-  - A primary goal of linguistics is to figure out *what is in people’s mental grammar.*
-
---
-
-  - For linguists, *grammar includes everything from how sounds are organized into words to how words are organized into sentences to how sentences are organized into conversations*.
-
---
-
-  - We all learn our native languages as children, and use the rules of our grammar mostly without thinking about it, but it turns out that the grammar of any language is *extremely complex* and even after years of study, there's still a lot we don't know
-
----
-
-class: center, middle
-
-# **The Wug Test**
-
----
-
-# Unconscious rules (The Wug Test)
-
-- Here's a grammatical rule you probably follow without knowing it exists:
-
---
-
-  - **How do you form plural nouns in English?**
-
-  - Linguist Jean Berko Gleason invented the famous **Wug Test** to study how children acquire grammatical rules.
-
-  - Let’s use the Wug Test to see what we know about English plurals!
-
----
-
-# Wug Test: Question 1
-
+## **What is language? What is grammar?**
+<br><br>
 .pull-left[
-
-
-]
-
+.pull-left[<img src="../pic/0122/german1.jpg" width="100%">]
+.pull-right[<img src="../pic/0122/german2.jpg" width="100%">]
+<br><br>
+<img src="../pic/0122/german3.jpg" width="100%">]
 .pull-right[
-
-
+**discuss with your neighbors**<br><br>
+- What is language?<br><br>
+- What is grammar?<br><br>
+- How are the two connected?
 ]
 
-(Fill in the blank. *Focus on sounds, not spelling.*) 
+---
+## **What is language?**
+<br>
+.pull-left[
+- language is a *human communication system* we use for **communicating** ideas and **socializing**<br><br>
+- language is a *systematic, rule-governed* **system**
+  - language combines <span style="color:green"><b>sounds</b></span> (or signs) into <span style="color:blue"><b>words</b></span>, and <span style="color:green"><b>words</b></span> into <span style="color:blue"><b>sentences</b></span> to express complex ideas<br><br>
+  - We need rules to understand how to put together ideas into language when speaking and decode language into ideas when listening: **a mental grammar**
+]
+.pull-right[
+<img src="../pic/0122/grandma.jpg" width="90%">
+]
+
+---
+## **What is language?**
+<br>
+.pull-left[
+- the rules of your mental grammar might not be those rules you learn in school or read in a textbook<br><br>
+- but **every speaker has a mental grammar**, even if they're not aware of it, and no matter what language or dialect they speak.<br><br>
+- *I ain't got no time*.<br><br>
+
+  - **good**, we understand, accept and use it
+  - **bad**, double negation is not allowed
+]
+.pull-right[
+<img src="../pic/0122/jury.jpg" width="90%">
+]
+
+---
+
+## **Linguistics:** the scientific study of language
+<br>
+.pull-left[
+<br><br>
+<img src="../pic/0122/memes.jpg" width="90%">
+]
+.pull-right[
+- **scientific** method with experiments and **real-life data** to develop theories about how language works<br><br>
+
+- primary goal: to figure out people’s <span style="color:green"><b>mental grammar</b></span><br><br>
+
+- For linguists, **grammar** includes:
+  - how <u>sounds</u> are organized into <u>words</u>
+  - how <u>words</u> are organized into <u>sentence</u>
+  - how <u>sentences</u> are organized into <u>conversations</u><br><br>
+
+- We all use the rules of our native language grammar mostly without thinking about it, but it turns out that the grammar of any language is **extremely complex**
+]
+
+---
+## **Unconscious Rules (The Wug Test)**
+<br><br>
+.pull-left[
+- here's a grammatical rule you probably follow **without knowing** it exists:
+<br><br>
+- how do you form <span style="color:green"><b>plural nouns</b></span> in English?
+<br><br>
+- the linguist Jean Berko Gleason invented the famous **Wug Test** to study how children acquire grammatical rules
+]
+.pull-right[
+<br><br>
+<img src="../pic/0122/wug.png" width="40%">
+<span style="color:white">....</span>
+<img src="../pic/0122/dr.png" width="48%">
+<br><br>
+<span style="color:white"><i>Dr. Jean Berko Gleason...</i></span>
+<i>Dr. Jean Berko Gleason</i>
+]
+
+---
+## **Wug Test - wug**
+<br>
+.pull-left[
+<img src="../pic/0122/wug1.png" width="100%">
+]
+.pull-right[
+<img src="../pic/0122/wug2.png" width="100%">
+]
+<br><br>
+Fill in the blank. Focus on **sounds**, not the <span style="color:green"><b>spelling</b></span><br><br>
 
 1. wug[əz]
 
@@ -272,20 +313,16 @@ class: center, middle
 3. wug[s]
 
 ---
-
-# Wug Test: Question 2
-
+## **Wug Test - pesh**
+<br>
 .pull-left[
-
-
+<img src="../pic/0122/pesh1.png" width="100%">
 ]
-
-
 .pull-right[
-
+<img src="../pic/0122/pesh2.png" width="100%">
 ]
-
-(Fill in the blank. *Focus on sounds, not spelling.*) 
+<br><br>
+Fill in the blank. Focus on **sounds**, not the <span style="color:green"><b>spelling</b></span><br><br>
 
 1. pesh[əz]
 
@@ -294,20 +331,16 @@ class: center, middle
 3. pesh[s]
 
 ---
-
-# Wug Test: Question 3
-
+## **Wug Test - lup**
+<br>
 .pull-left[
-
-
+<img src="../pic/0122/lup1.png" width="100%">
 ]
-
-
 .pull-right[
-
+<img src="../pic/0122/lup2.png" width="100%">
 ]
-
-(Fill in the blank. *Focus on sounds, not spelling.*) 
+<br><br>
+Fill in the blank. Focus on **sounds**, not the <span style="color:green"><b>spelling</b></span><br><br>
 
 1. lup[əz]
 
@@ -316,20 +349,16 @@ class: center, middle
 3. lup[s]
 
 ---
-
-# Wug Test: Question 4
-
+## **Wug Test - gutch**
+<br>
 .pull-left[
-
-
+<img src="../pic/0122/gutch1.png" width="100%">
 ]
-
-
 .pull-right[
-
+<img src="../pic/0122/gutch2.png" width="100%">
 ]
-
-(Fill in the blank. *Focus on sounds, not spelling.*) 
+<br><br>
+Fill in the blank. Focus on **sounds**, not the <span style="color:green"><b>spelling</b></span><br><br>
 
 1. gutch[əz]
 
@@ -339,20 +368,16 @@ class: center, middle
 
 
 ---
-
-# Wug Test: Question 5
-
+## **Wug Test - peff**
+<br>
 .pull-left[
-
-
+<img src="../pic/0122/peff1.png" width="100%">
 ]
-
-
 .pull-right[
-
+<img src="../pic/0122/peff2.png" width="100%">
 ]
-
-(Fill in the blank. *Focus on sounds, not spelling.*) 
+<br><br>
+Fill in the blank. Focus on **sounds**, not the <span style="color:green"><b>spelling</b></span><br><br>
 
 1. peff[əz]
 
@@ -362,20 +387,16 @@ class: center, middle
 
 
 ---
-
-# Wug Test: Question 6
-
+## **Wug Test - tor**
+<br>
 .pull-left[
-
-
+<img src="../pic/0122/tor1.png" width="100%">
 ]
-
-
 .pull-right[
-
+<img src="../pic/0122/tor2.png" width="100%">
 ]
-
-(Fill in the blank. *Focus on sounds, not spelling.*) 
+<br><br>
+Fill in the blank. Focus on **sounds**, not the <span style="color:green"><b>spelling</b></span><br><br>
 
 1. tor[əz]
 
@@ -384,340 +405,181 @@ class: center, middle
 3. tor[s]
 
 ---
+.pull-left[
+## **English Plural Rules**
+<br>
+<img src="../pic/0122/moose.jpg" width="90%">]
+.pull-right[<br><br>
+English plurals follow **a simple rule** that we all figured out when
+we learned the language<br><br>
 
-class: center, middle
+but we probably **were never taught** it explicitly and most people aren't aware of it as adults<br>
 
-# Answers
+- We know it's a rule because we were all <span style="color:green"><b>able to apply</b></span> that rule to new words<br><br>
 
----
-
-# English plural rule
-
-English plurals follow a simple rule that we all figured out when we learned the language, but we probably were never taught it explicitly and most people aren't aware of it as adults.
-
---
-
-- We know it's a rule because we were all able to apply that rule to new words.
-
---
-
-**Rules:**
-
-- Does the word end in a sibilant consonant? *(s, z, sh, zh, ch, j)*
-
-  - **add [-əz]**
-
---
-
-- Does the word end in a voiceless consonant? *(p, t, k, f, etc.)*
-
-  - **add [-s]**
-
---
-
-- Does the word end in a voiced consonant? *(b, d, g, m, n, l, r, etc.)* 
-
+1. Does the word end in a sibilant consonant? *(s, z, sh, zh, ch, j)*
+  - **add [-əz]**<br><br>
+2. Does the word end in a voiceless consonant? *(p, t, k, f, etc.)*
+  - **add [-s]**<br><br>
+3. Does the word end in a voiced consonant? *(b, d, g, m, n, l, r, etc.)* 
   - **add [-z]**
-  
----
-
-class: center, middle
-
-# ***A***-**prefixing**
+]
 
 ---
-
-# Non-standard rules (*a*-prefixing)
-
+## **What do we know when we know a language?**
+<br><br>
 .pull-left[
+Which of these words **could be** English words?<br><br>
+1. threal<br><br>
+2. sthklings<br><br>
+3. winthrangs<br><br>
+4. sthampfs<br><br>
+5. pkalikfs<br><br>
+6. kroshield
+]
+.pull-right[
+<br><br>
+<img src="../pic/0122/thsound.jpeg" width="80%">
+]
 
-So far, we've seen that language follows **mental rules** that are **often unconscious** and aren't always what we learn in school.
+---
+## **What do we know when we know a language?**
+<br><br>
+.pull-left[
+Which of these words **could be** English words?<br><br>
+1. **threal**<br><br>
+2. sthklings<br><br>
+3. **winthrangs**<br><br>
+4. sthampfs<br><br>
+5. pkalikfs<br><br>
+6. **kroshield**
+]
+.pull-right[
+<br><br>
+<img src="../pic/0122/thsound.jpeg" width="80%">
+]
+---
+## **What do we know when we know a language?**
+<br><br>
+.pull-left[
+<br>
+<img src="../pic/0122/was.jpeg" width="80%">]
+.pull-right[
+Which of these sentences are **possible** in English?<br><br>
+1. The linguist met a philosopher in Athens.<br><br>
+2. Linguist the met philosopher Athens in.<br><br>
+3. The linguist thinks that she is in Paris.<br><br>
+4. The linguist thinks she is in Paris.<br><br>
+5. The linguist wonders whether she is intelligent.<br><br>
+6. The linguist wonders she is intelligent.
+]
 
-  - **All varieties of all languages** follow a mental grammar – even if they're not part of the "standard" language (by the way, "standard language" isn't real!).
+---
+## **What do we know when we know a language?**
+<br><br>
+.pull-left[
+<br>
+<img src="../pic/0122/was.jpeg" width="80%">]
+.pull-right[
+Which of these sentences are **possible** in English?<br><br>
+1. **The linguist met a philosopher in Athens**.<br><br>
+2. Linguist the met philosopher Athens in.<br><br>
+3. **The linguist thinks that she is in Paris**.<br><br>
+4. **The linguist thinks she is in Paris**.<br><br>
+5. **The linguist wonders whether she is intelligent**.<br><br>
+6. The linguist wonders she is intelligent.
+]
 
-- Let's see an example with a phenomenon called a-prefixing.
+---
+## **What do we know when we know a language?**
+<br><br>
+In which context is this sentence **true**?<br><br>
+<div style="text-align:center">
+<b><i>Every giraffe talked to a panda.</i></b>
+<br><br>
+<img src="../pic/0122/giraff.png" width="90%">
+</div>
 
-  - This is when the sound a- is placed before an -ing word.
+---
+## **What do we know when we know a language?**
+<br>
+we reached a **consensus** in the simple tests we did<br><br>
+<div style="text-align:center">
+but how did you know this?<br><br>
+<img src="../pic/0122/rule.png" width="75%">
+</div>
 
-  - *Example:* children's song "A-Hunting We Will Go"
+---
+## **What do we know when we know a language?**
+<br>
+.pull-left[
+A native speaker of **language L** knows a lot about this **language L**:<br><br>
+- possible/impossible <span style="color:blue"><b>sounds</b></span> and <span style="color:blue"><b>sound combinations</b></span> of L<br><br>
+- possible/impossible <span style="color:green"><b>sentence</b></span> of L<br><br>
+- possible/impossible <span style="color:orange"><b>meaning</b></span> of novel sentences<br><br><br>
+- but this knowledge is **unconscious**
+]
+.pull-right[<img src="../pic/0122/easyenglish.jpg" width="95%">]
 
-  - This phenomenon is found in many dialects of English, including Appalachian English.
+---
+## **Linguistic Rules**
+<br>
+- One goal of **Linguistics** is to *figure out the rules that explain how language works*<br><br>
 
+- All varieties of all languages follow systematic rules, and all speakers have these rules as part of their **mental grammar**, aka their **linguistic competence**
+  - grammatical rules may be **unconscious**: we largely use them without being aware of it
+  - even **non-standard varieties** have grammatical rules
+  - **every speaker** of **every language and variety** has a mental grammar<br><br>
+  
+- throughout the semester, we'll keep coming back to this idea of a **mental grammar**, we'll learn ways to figure out how grammar works at every level:
+  - sounds
+  - words
+  - sentences
+  - conversations<br><br>
+
+- when we say grammar, **we're talking about what people** ***really do***, and not necessarily what they're "supposed" to do according to textbooks or English class
+
+---
+## Linguistics as A **Science**
+<br>
+.pull-left[
+- Linguistics is the **scientific** study of langauge <br><br>
+- But what does it mean to say that it's **science**?  <br><br>
+- What is a science?<br><br>
+![width=80%](../pic/0122/linguist.png)
+]
+.pull-right[
+Science uses the **scientific method** to test hypotheses about how natural phenomena (in our case, language) work:
+1. Develop a **hypothesis** grounded in personal observations, theory, and previous research<br><br>
+2. **Design an experiment** to collect real-world (empirical) data to test your hypothesis<br><br>
+3. Run your experiment, **collect** your data<br><br>
+4. **Analyse your data** - is your hypothesis true or false?<br><br>
+5. Based on your results, update your theories, develop a new hypothesis, and **repeat**!
+]
+---
+## Linguistics as A **Science**
+<br>
+.pull-left[
+1. I found everyone around me is a linguist (**observation**)<br><br>
+2. I thought that every Rutgers student is a linguist (**hypothesis**)<br><br>
+3. I went out and asked every one (**experiment**)<br><br>
+4. I found a Rutgers student who is actually mathematician (**reject**)<br><br>
+5. I have a new hypothesis! (**repeat**)
 ]
 
 .pull-right[
-
-
+Come up with your own experiment!
+- Most English permits only 1 modal/clause: I <u>*might*</u> eat. I <u>*could*</u> eat.<br><br>
+- Southern American English permits 2: I <u>*might*</u> <u>*could*</u> eat.
+Come up with a hypothesis – a statement that could be true or false – about English modals. (Ideas: Where specifically? What about other modals: can, may, should, oughta? Does anyone use more than 2?) <br><br>
+- What kind of data could you collect to prove or disprove your hypothesis? How could you design an experiment to collect that data?
 ]
 
 ---
-
-# Non-standard rules (*a*-prefixing)
-
-As English speakers, you probably have intuitions about how this phenomenon works even if you don't use it yourself.
-
---
-
-Which of these sentences sounds **natural** or **possible** to you? That is, which ones could you imagine someone saying?
-
-**1.** I know he was a-tellin’ the truth.
-
-**2.** Those a-screamin’ children didn’t bother me.
-
-**3.** He was a-leadin’ his cow to pasture.
-
-**4.** The movie was a-charmin’.
-
-**5.** John kept a-eatin’ his food.
-
-**6.** He kept a-askin’ questions.
-
----
-
 class: center, middle
-
-# Answers
-
----
-
-# Non-standard rules (*a*-prefixing)
-
-.pull-left[
-- Even though *a*-prefixing is non-standard, it follows rules!
-
-- You can use a-prefixing:
-
-  - Before *-ing* **verbs** but not **adjs** or **nouns**
-
-  - Before a **consonant** but not a vowel
-
-- **Non-standard varieties follow their own rules.**
-
-- **These rules are part of speakers’ mental grammar.**
-
-]
-
---
-
-.pull-right[
-
-*You probably got something like this:*
-
-1. ✔ I know he was a-tellin’ the truth.
-
-2. **✘** Those a-screamin’ children didn’t bother me.
-
-3. ✔ He was a-leadin’ his cow to pasture.
-
-4. **✘** The movie was a-charmin’.
-
-5. **✘** John kept a-eatin’ his food.
-
-6. **✘** He kept a-askin’ questions. 
-
-]
-
----
-
-class: center, middle
-
-# Linguistic rules
-
----
-
-# Linguistic rules
-
-- One goal of linguistics is to *figure out the rules that explain how language works.*
-
-- All varieties of all languages follow systematic rules, and all speakers have these rules as part of their **mental grammar**, aka their **linguistic competence**.
-
---
-
-- As we’ve seen today:
-
-  - Grammatical rules may be **unconscious**: we largely use them without being aware of it.
-
-  - Even **non-standard varieties** have grammatical rules.
-
-  - **Every speaker** of **every language and variety** has a mental grammar.
-
----
-
-# Linguistic rules
-
-- Throughout the semester, we'll keep coming back to this idea of a mental grammar.
-
---
-
-- We'll learn ways to figure out how grammar works at every level:
-
---
-
-  - Sounds
-
---
-
-  - Words
-
---
-
-  - Sentences
-
---
-
-  - Conversations
-
---
-
-- But remember! When we say grammar, **we're talking about what people** ***really do***, and not necessarily what they're "supposed" to do according to textbooks or English class.
-
----
-
-class: center, middle
-
-# **Descriptivism vs. prescriptivism**
-
----
-
-# **Descriptivism vs. prescriptivism**
-
-- Consider the following sentence:
-
-  - *I ain't got no time.*
-
---
-
-- We all understand this sentence, and we may even say sentences like this sometimes.
-
-  - That means it must be part of our mental grammar.
-
---
-
-- **But** we often hear that sentences like this are "bad English" or "don't have grammar".
-
-  - This sentence in particular uses a double negative and the word *ain't*, which some people look down on.
-  
---
-
-- So how can the sentence both be part of our grammar and "not have grammar" at the same time?
-
-  - To understand this, we need to understand the difference between **Prescriptivism and Descriptivism**
-
----
-
-# **Prescriptivism**
-
-- **Prescriptivism** is an approach to language that asserts that there is only one "correct" way to talk, and that tries to tell people what they should and shouldn't do (it prescribes language).
-
---
-
-- We often hear prescriptive rules in language classes, writing manuals, style guides, online grammar correction sites. These are rules like:
-
---
-
-  - Don't use double negatives.
-
-  - Don't split your infinitives.
-
-  - Ain't ain't a word. **(lol)**
-
-  - Don't end sentences with a preposition.
-  
---
-  
-- But English speakers break these rules all the time, and it sounds completely natural to native speakers.
-
----
-
-# Descriptivism
-
-- An alternative approach is **descriptivism**: an approach to language that seeks to *describe how people really talk* in their daily lives without judgment.
-
---
-
-- Linguists take a descriptive approach and in this class we'll also take a descriptive approach.
-
---
-
-- This is important for several reasons:
-
-  - **Linguistics is a science** and descriptivism helps maintain a *neutral, scientific point of view.*
-
-  - If our goal is to understand people's mental grammars, we won't get very far by focusing on prescriptive rules.
-
-  - It **respects** the language patterns of every individual and community as completely legitimate and valid ways to talk.
-
----
-
-class: center, middle
-
-# Standard vs. non-standard 
-
----
-
-# Standard vs. non-standard language
-
-- In order to avoid prescriptivism, we need to avoid judgmental terms like "bad grammar", "incorrect language", or "broken English'.
-
---
-
-- Instead, we'll use the terms **standard and non-standard** to describe language:
-
-  - **Standard language:** the variety taught in schools and used in formal and official settings like the workplace, education, government, newsmedia, textbooks, etc.
-
---
-
-  - **Non-standard language:** other varieties used in more colloquial settings
-
---
-
-- **Note:**
-
-  - The standard variety is often a bit artificial and no one speaks that way all the time.
-
-  - People may disagree on what counts as standard or non-standard.
-
-  - Non-standard language may be stigmatized in some cases, but it is just as legitimate and expressive as standard language. There is nothing inherently "better" or "worse" about any variety or language.
-
----
-
-class: center, middle
-
-# Grammatical vs. ungrammatical
-
----
-
-# Grammatical vs. ungrammatical
-
-We also need to use the terms grammatical and ungrammatical as linguists understand them.
-
---
-
-- **Grammatical:** Language that would be said and understood by a native speaker, and would sound natural to a native speaker of the language.
-
---
-
-- **Ungrammatical:** Language that would not be said or understood by a native speaker. Often, this is language that just doesn't sound right, for example:
-
-  - **John has finishing his homework.* (* = ungrammatical)
-  
-  - *This apples is delicious.
-
---
-
-Speakers may disagree on what is grammatical based on their own mental grammar, and **language can be non-standard but still grammatical**, as long as it's something that would sound natural to a native speaker.
-
-- *How about them apples!* and *I don't want none* are both **non-standard but grammatical.**
-
----
-class: center, middle
-### <span style="color:green"><b>THE END, THANK YOU EVERYONE!</b></span><br><br>
-**Homework VIII** is due **Dec 07** (Synday)<br><br>
-last office hour on **Dec 10** (Wednesday)<br>
-I will still be *available by appointment*!<br><br>
-last day to submit late homework/assignment is **Dec 10** (Wednesday)<br><br>
-The final exam is on **Dec 19** at **12:00 - 03:00 pm** in the lecture room [**ABE 1180**](https://webapps.rutgers.edu/dcs/classrooms/ABE-1180)<br><br>
-<img src="../pic/0122/fine.jpeg" width="30%">
+**no homework** is due this week<br><br>
+<span style="color:green"><b>readings</b></span> <i>Thinking like a Linguist</i> [Anderson Ch1] <br><br>
+<img src="../pic/0122/fine.jpeg" width="55%">
 <br><br>
 Slides created via the R package [**xaringan**](https://github.com/yihui/xaringan).
 
